--- a/Serviços de Veteranos e Pensionistas da Marinha/index.html
+++ b/Serviços de Veteranos e Pensionistas da Marinha/index.html
@@ -9,7 +9,7 @@
   }
 
 
-.missao{
+.center-txt{
       text-align: center;
       font-weight: 500;
     }
@@ -43,17 +43,19 @@
 </style>
 
 
-<h3 class="missao">
+<h3 class="center-txt">
 	Missão</h3>
 <p class="p_intro">
 	Gerenciar a concessão de benefícios de veteranos militares e civis, ex-combatentes, anistiados políticos e
 seus respectivos pensionistas, afim de contribuir para a Administração de Pessoal da Marinha do Brasil.</p>
 <br />
 
+<!--  IMAGEM DO POSTO DE SVPM
 <div> <img class="img-svpm" src="https://www.marinha.mil.br/cmn/sites/www.marinha.mil.br.cmn/files/salao1.jpg" alt="SVPM JPG"></div>
+ -->
 
  <div class="p_intro">
-     <h4 class="missao">Atenção</h4>
+     <h4 class="center-txt">Atenção</h4>
 
         <p>
         Para ter acesso aos serviços o veterano/ pensionista deverá apresentar o original de um documento de
@@ -74,7 +76,7 @@ identificação, com foto atualizada.</p> <br>
 O recadastramento é obrigatório e deve ser realizado no mês de seu aniversário ou no anterior. A falta do
 recadastramento anual poderá acarretar o bloqueio/suspensão do pagamento dos benefícios. </p> <br>
 
-<p><strong>Endereço:</strong> <br>
+<p><strong>Endereço:</strong> 
 
 Casa do Marinheiro - Avenida Brasil, n° 10.592 - Penha.
 </p> 
@@ -92,7 +94,7 @@ Casa do Marinheiro - Avenida Brasil, n° 10.592 - Penha.
     Email: domiciliar@marinha.mil.br 
 </p> <br>
 
-<p><strong>Ouvidoria:</strong> <br>
+<p class="center-txt"><strong>Ouvidoria:</strong> <br>
     Para entrar em contato com a Ouvidoria, caso haja, reclamações, sugestões, denúncias, elogios ou
     dúvidas, referentes aos serviços prestados: <br>
     Telefone:(21) 2104-6200 <br>
